Configure Docker pipeline for amalab123/projetmpisi-app